src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Archived_Initial_Referrer__c</fullName>
        <label>Archived Initial Referrer</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Archived_Referrer__c</fullName>
        <label>Archived Referrer</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Default_Gift_Amount__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Gift Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Browser__c</fullName>
        <label>Device Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Name__c</fullName>
        <label>Device Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_OS__c</fullName>
        <label>Device OS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <label>Device Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drupal_User_ID__c</fullName>
        <description>The Drupal user&apos;s uid</description>
        <externalId>true</externalId>
        <label>Drupal User ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Action_Date__c</fullName>
        <description>The date this contact first took action.</description>
        <inlineHelpText>The date this contact first took action.</inlineHelpText>
        <label>First Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Transaction_Date__c</fullName>
        <formula>if( Account.npe01__One2OneContact__c = Id ,
Account.npe01__FirstDonationDate__c ,
null
)[disable]</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_String_Encrypted__c</fullName>
        <label>Gift String Encrypted</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gift_String__c</fullName>
        <formula>&quot;25|50|75|100|250&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gift String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Market_Source__c</fullName>
        <description>this is the value of the first market source for this contact which never changes once it is set</description>
        <inlineHelpText>Initial Market Source preserves the first value associated to this contact</inlineHelpText>
        <label>Initial Market Source</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Referrer__c</fullName>
        <label>Initial Referrer</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Registration_Date__c</fullName>
        <description>Date this contact was originally came in through Drupal website.</description>
        <label>Initial Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Action_Date__c</fullName>
        <description>The date this contact last took action.</description>
        <inlineHelpText>The data this contact last took action.</inlineHelpText>
        <label>Last Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lifetime_Transaction_Total_Count__c</fullName>
        <formula>IF( Account.npe01__One2OneContact__c = Id ,
Account.npe01__LifetimeDonationHistory_Number__c,
null
)[disable]</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lifetime Transaction Total Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Source_Type__c</fullName>
        <formula>CASE( LEFT( UPPER( Initial_Market_Source__c ), 3),
&quot;EML&quot;,&quot;Email&quot;,
&quot;WEB&quot;,&quot;Organic Website&quot;,
&quot;BAN&quot;,&quot;Banner Ads&quot;,
&quot;GAD&quot;,&quot;Google Ads&quot;,
&quot;OTH&quot;,&quot;Other&quot;,
&quot;n/a&quot;)</formula>
        <label>Market Source Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Source__c</fullName>
        <label>Market Source</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCDonate_Active_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This points to the contact&apos;s active One Click Donate subscription object.</description>
        <inlineHelpText>This points to the contact&apos;s active One Click Donate subscription object.</inlineHelpText>
        <label>One Click Donate Active Subscription</label>
        <referenceTo>One_Click_Donate_Subscription__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OCDonate_Active__c</fullName>
        <description>Indicates whether this contact has an active One Click Donate subscription.</description>
        <formula>IF((ISBLANK(OCDonate_Opt_Out_Date__c) || ISNULL (OCDonate_Opt_Out_Date__c)) &amp;&amp; !ISBLANK(OCDonate_Opt_in_Date__c) &amp;&amp; !ISNULL(OCDonate_Opt_in_Date__c), True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If checked, this contact has an active One Click Donate subscription.</inlineHelpText>
        <label>Active One Click Donate Subscription?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCDonate_CC_Exp_Month__c</fullName>
        <description>Expiration month (number) of the credit card used by the contact&apos;s active One Click Donate subscription.</description>
        <inlineHelpText>Expiration month (number) of the credit card used by the contact&apos;s active One Click Donate subscription.</inlineHelpText>
        <label>One Click Donate CC Exp Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCDonate_CC_Exp_Year__c</fullName>
        <description>Expiration year of the credit card used by the contact&apos;s One Click Donate subscription.</description>
        <inlineHelpText>Expiration year of the credit card used by the contact&apos;s One Click Donate subscription.</inlineHelpText>
        <label>One Click Donate CC Exp Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCDonate_CC_Last_4__c</fullName>
        <description>Last 4 digits of the credit card used by the contact&apos;s active One Click Donate subscription.</description>
        <inlineHelpText>Last 4 digits of the credit card used by the contact&apos;s active One Click Donate subscription.</inlineHelpText>
        <label>One Click Donate CC Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCDonate_CC_Type__c</fullName>
        <description>Type of credit card used by the contact&apos;s active One Click Donate subscription.</description>
        <inlineHelpText>Type of credit card used by the contact&apos;s active One Click Donate subscription.</inlineHelpText>
        <label>One Click Donate CC Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCDonate_Opt_Out_Date__c</fullName>
        <description>Date the contact opted out of One Click Donate.</description>
        <inlineHelpText>Date the contact opted out of One Click Donate.</inlineHelpText>
        <label>One Click Donate Opt-Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OCDonate_Opt_in_Date__c</fullName>
        <description>Date the contact opted into One Click Donate.</description>
        <inlineHelpText>Date the contact opted into One Click Donate.</inlineHelpText>
        <label>One Click Donate Opt-in Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OCDonate_Payment_Gateway__c</fullName>
        <description>Payment gateway used by the contact&apos;s active OCD subscription.</description>
        <inlineHelpText>Payment gateway used by the contact&apos;s active OCD subscription.</inlineHelpText>
        <label>One Click Donate Payment Gateway</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCDonate_Token_Expiration__c</fullName>
        <description>Date/time at which the current OCD token expires.</description>
        <inlineHelpText>Date/time at which the current OCD token expires.</inlineHelpText>
        <label>One Click Donate Token Expiration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OCDonate_URL__c</fullName>
        <description>One Click Donate HMAC token.</description>
        <inlineHelpText>Append this token to the site/form URL to facilitate a one-click donation.</inlineHelpText>
        <label>One Click Donate URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P2P_Total_Campaigns__c</fullName>
        <description>The number of personal campaigns this contact has created.</description>
        <label>Number of Campaigns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2P_Total_Donation_Amount__c</fullName>
        <label>Total Donation Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P2P_Total_Donations__c</fullName>
        <label>Total Donations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Query_String_Encrypted__c</fullName>
        <label>Query String Encrypted</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Query_String__c</fullName>
        <formula>IF(ISBLANK(FirstName),&apos;&apos;, &apos;first_name=&apos; &amp;  FirstName) &amp; &apos;&amp;last_name=&apos; &amp; LastName &amp; &apos;&amp;email=&apos; &amp; Email &amp; 
IF((MailingStreet == &apos;&apos; || MailingStreet == NULL),&apos;&apos;, &apos;&amp;address=&apos; &amp; MailingStreet) 
&amp; IF((MailingCity == &apos;&apos; || MailingCity == NULL),&apos;&apos;, &apos;&amp;city=&apos; &amp; MailingCity ) 
&amp; IF((MailingState == &apos;&apos; || MailingState == NULL),&apos;&apos;, &apos;&amp;state=&apos; &amp; MailingState) 
&amp; IF((MailingPostalCode == &apos;&apos; || MailingPostalCode == NULL),&apos;&apos;, &apos;&amp;zip=&apos; &amp; MailingPostalCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Query String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Amount__c</fullName>
        <description>The amount of the contact&apos;s primary recurring donation series.</description>
        <label>Recurring Donation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Order_Id__c</fullName>
        <label>Recurring Donation Order Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <label>Referrer</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Search_Engine__c</fullName>
        <label>Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_String__c</fullName>
        <label>Search String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Actions_30_Days__c</fullName>
        <description>Total number of actions last 30 days.</description>
        <inlineHelpText>Total number of actions taken in the last 30 days.</inlineHelpText>
        <label>Total Actions (30 Days)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Message_Actions__c</fullName>
        <description>The total number of message actions taken.</description>
        <inlineHelpText>The total number of message actions taken by this contact.</inlineHelpText>
        <label>Total Message Actions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Petitions_Signed__c</fullName>
        <description>Total number of petitions signed.</description>
        <inlineHelpText>Total number of petitions signed.</inlineHelpText>
        <label>Total Petitions Signed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Social_Actions__c</fullName>
        <description>The total number of social actions taken.</description>
        <inlineHelpText>The total number of social actions taken by this contact.</inlineHelpText>
        <label>Total Social Actions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Twitter_Account_Create_Date__c</fullName>
        <description>The date the contact&apos;s Twitter account was created.</description>
        <label>Twitter Account Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Twitter_Followers_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of people following this contact&apos;s Twitter account.</description>
        <label>Twitter Followers Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Twitter_Following_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of people contact is following on Twitter.</description>
        <label>Twitter Following Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Twitter_ID__c</fullName>
        <description>The contact&apos;s Twitter ID string.</description>
        <label>Twitter ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_Screen_Name__c</fullName>
        <description>The contact&apos;s twitter screen name.</description>
        <label>Twitter Screen Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_Status_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of tweets contact has made.</description>
        <label>Twitter Status Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Agent__c</fullName>
        <label>User Agent</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npe01__AlternateEmail__c</fullName>
        <description>Alternate Email is an optional fourth email: Not personal, preferred, or work email.</description>
        <inlineHelpText>Alternate Email is an optional fourth email: Not personal, preferred, or work email.</inlineHelpText>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__HomeEmail__c</fullName>
        <description>See Preferred Email field.</description>
        <inlineHelpText>See Preferred Email field.</inlineHelpText>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__Home_Address__c</fullName>
        <description>Formula: Uses primary address type field to determine Home Address from Mailing or Other address.</description>
        <formula>if(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Home&quot;),
  if(LEN(MailingStreet)&gt;0, MailingStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(MailingCity)&gt;0, MailingCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingState)&gt;0, MailingState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingPostalCode)&gt;0, MailingPostalCode,&quot;&quot;) &amp; 
  If(LEN( MailingCountry ) &gt;0, &quot;, &quot; &amp;MailingCountry,&quot;&quot;)
,
if(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Home&quot;),
  if(LEN(OtherStreet)&gt;0, OtherStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(OtherCity)&gt;0, OtherCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherState)&gt;0, OtherState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherPostalCode)&gt;0, OtherPostalCode,&quot;&quot;) &amp; 
  If(LEN(OtherCountry ) &gt;0, &quot;, &quot; &amp; OtherCountry,&quot;&quot;)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Uses primary address type field to determine Home Address from Mailing or Other address.</inlineHelpText>
        <label>Home Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Organization_Type__c</fullName>
        <description>Formula: In order of preference, the SYSTEM_AccountType field, the Account Type field, and &quot;Organization&quot;.</description>
        <formula>NULLVALUE(IF( Account.npe01__SYSTEM_AccountType__c==&quot;&quot;, TEXT(Account.Type),Account.npe01__SYSTEM_AccountType__c),&quot;Organization&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: In order of preference, the SYSTEM_AccountType field, the Account Type field, and &quot;Organization&quot;.</inlineHelpText>
        <label>Organization Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Other_Address__c</fullName>
        <description>Formula: If the Primary Address Type is Other, the Mailing Address.  If the Secondary Address Type is Other, the Other Address.</description>
        <formula>if(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Other&quot;),
  if(LEN(MailingStreet)&gt;0, MailingStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(MailingCity)&gt;0, MailingCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingState)&gt;0, MailingState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingPostalCode)&gt;0, MailingPostalCode,&quot;&quot;) &amp; 
  If(LEN( MailingCountry ) &gt;0, &quot;, &quot; &amp;MailingCountry,&quot;&quot;)
,
if(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Other&quot;),
  if(LEN(OtherStreet)&gt;0, OtherStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(OtherCity)&gt;0, OtherCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherState)&gt;0, OtherState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherPostalCode)&gt;0, OtherPostalCode,&quot;&quot;) &amp; 
  If(LEN(OtherCountry ) &gt;0, &quot;, &quot; &amp; OtherCountry,&quot;&quot;)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: If the Primary Address Type is Other, the Mailing Address.  If the Secondary Address Type is Other, the Other Address.</inlineHelpText>
        <label>Other Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__PreferredPhone__c</fullName>
        <description>Which phone number should be used for most communications involving this Contact?</description>
        <inlineHelpText>Which phone number should be used for most communications involving this Contact?</inlineHelpText>
        <label>Preferred Phone</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Preferred_Email__c</fullName>
        <description>Which email should be used for most communications involving this Contact?</description>
        <inlineHelpText>Which email should be used for most communications involving this Contact?</inlineHelpText>
        <label>Preferred Email</label>
        <picklist>
            <picklistValues>
                <fullName>Personal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Primary_Address_Type__c</fullName>
        <description>Which type of address is the mailing address?</description>
        <inlineHelpText>Which type of address is the mailing address?</inlineHelpText>
        <label>Primary Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Excludes this Contact from One to One or Bucket account processing.</description>
        <inlineHelpText>Excludes this Contact from One to One or Bucket account processing.</inlineHelpText>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Secondary_Address_Type__c</fullName>
        <description>What type of address is the other address?</description>
        <inlineHelpText>What type of address is the other address?</inlineHelpText>
        <label>Secondary Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__SystemAccountProcessor__c</fullName>
        <description>Hidden system field: do not change.  Updated by automatic processes.  See Contacts &amp; Organization settings.</description>
        <inlineHelpText>Indicates which model drives Account relationship behavior: Individual (Bucket) or One-to-One</inlineHelpText>
        <label>_SYSTEM: ACCOUNT PROCESSOR</label>
        <picklist>
            <picklistValues>
                <fullName>One-to-One</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Type_of_Account__c</fullName>
        <description>Formula: &quot;Individual&quot; or &quot;Organization&quot; depending on Account setting.</description>
        <formula>IF(Account.npe01__SYSTEMIsIndividual__c,&quot;Individual&quot;,&quot;Organization&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: &quot;Individual&quot; or &quot;Organization&quot; depending on Account setting.</inlineHelpText>
        <label>Type of Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__WorkEmail__c</fullName>
        <description>See Preferred Email field.</description>
        <inlineHelpText>See Preferred Email field.</inlineHelpText>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__WorkPhone__c</fullName>
        <description>See &apos;Preferred Phone&apos; field.</description>
        <inlineHelpText>See &apos;Preferred Phone&apos; field.</inlineHelpText>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npe01__Work_Address__c</fullName>
        <description>Formula: If the Primary Address Type is Work, the Mailing Address.  If the Secondary Address Type is Work, the Other Address.</description>
        <formula>if(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Work&quot;),
  if(LEN(MailingStreet)&gt;0, MailingStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(MailingCity)&gt;0, MailingCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingState)&gt;0, MailingState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingPostalCode)&gt;0, MailingPostalCode,&quot;&quot;) &amp; 
  If(LEN( MailingCountry ) &gt;0, &quot;, &quot; &amp;MailingCountry,&quot;&quot;)
,
if(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Work&quot;),
  if(LEN(OtherStreet)&gt;0, OtherStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(OtherCity)&gt;0, OtherCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherState)&gt;0, OtherState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherPostalCode)&gt;0, OtherPostalCode,&quot;&quot;) &amp; 
  If(LEN(OtherCountry ) &gt;0, &quot;, &quot; &amp; OtherCountry,&quot;&quot;)
  ,&quot;&quot; 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: If the Primary Address Type is Work, the Mailing Address.  If the Secondary Address Type is Work, the Other Address.</inlineHelpText>
        <label>Work Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__AverageAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See excluded Opportunity Record types, excluded Opportunity types in Household setting for &apos;always roll up to primary&apos; (exclude non individual Accounts).  Do not update.  Updated by automatic process.</description>
        <inlineHelpText>The average amount of all won Opportunities related to this Contact by a primary Opportunity Contact Role.</inlineHelpText>
        <label>Average Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Best_Gift_Year_Total__c</fullName>
        <inlineHelpText>The sum of won Opportunity amounts in the Best Gift Year.</inlineHelpText>
        <label>Best Gift Year Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Best_Gift_Year__c</fullName>
        <inlineHelpText>The year of the largest total amount of won Opportunities related to this Contact by primary Contact Role.  See also Best Gift Year Total.</inlineHelpText>
        <label>Best Gift Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__FirstCloseDate__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>The oldest Close Date of a won Opportunity with amount greater than zero related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__Formula_HouseholdMailingAddress__c</fullName>
        <description>Formula: Clone of the Household Mailing address (also a Formula)</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;,

Account.BillingStreet &amp; BR() &amp;
Account.BillingCity &amp; IF(LEN(Account.BillingCity) &gt; 0, &quot;, &quot;, &quot;&quot;) &amp; Account.BillingState &amp; &quot; &quot; &amp; Account.BillingPostalCode 
&amp; if (LEN(Account.BillingCountry)&gt;0,BR()&amp; Account.BillingCountry,&quot;&quot;) ,

npo02__Household__r.npo02__Formula_MailingAddress__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Clone of the Household Mailing address (also a Formula)</inlineHelpText>
        <label>Household Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Formula_HouseholdPhone__c</fullName>
        <description>Formula: Simple formula of Household Phone field.</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;, 
Account.npo02__HouseholdPhone__c,
npo02__Household__r.npo02__HouseholdPhone__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Simple formula of Household Phone field.</inlineHelpText>
        <label>Household Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Household_Naming_Order__c</fullName>
        <inlineHelpText>Determines the order in which Contact names are used to generate Household name.</inlineHelpText>
        <label>Household Naming Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>npo02__Household__c</referenceTo>
        <relationshipLabel>Household Members</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npo02__LargestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>The largest amount of a won Opportunity related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Largest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__LastCloseDateHH__c</fullName>
        <description>Formula: Last Close Date field of the related Household.</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;, 
Account.npo02__LastCloseDate__c,
npo02__Household__r.npo02__LastCloseDate__c)</formula>
        <label>Last Household Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastCloseDate__c</fullName>
        <description>System field: do not change. Updated by automatic processes. Do not edit.</description>
        <inlineHelpText>The close date of the most recent won Opportunity related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Last Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>The amount of the most recent (by Close Date) won Membership (Record Type) Opportunity related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Last Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipDate__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>The most recent Close Date of a won Membership (Record Type) Opportunity related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Last Membership Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipLevel__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>The level of the most recent (by Close Date) won Membership (Record Type) Opportunity related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Last Membership Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipOrigin__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>The origin (new, renewal, reacquire...) of the most recent (Close Date) won Membership (Record Type) Opportunity related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Last Membership Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__LastOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>The amount of the most recent won Opportunity by Close Date related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Last Gift Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>